# OpenEVCharger

./: .gitignore  BOARDS.md  CMakeLists.txt  README.md
.github/workflows/: eluminocity-companion.yml  fc41d-config.yml  firmware.yml  host-tests.yml
boards/eluminocity-ch21130/: README.md
boards/eluminocity-ch21130/companion/: .gitignore  Makefile  delta-bridge.conf.example
boards/eluminocity-ch21130/companion/image/: build-dcofimage.sh  test_wrap_dco.py  verify_dcofimage.py  wrap_dco.py
boards/eluminocity-ch21130/companion/src/: adc.c  adc.h  backoff.h  charger_state.c  charger_state.h  commands.c  commands.h  config.c  config.h  led.c  led.h  main.c  meter.c  meter.h  mqtt_adapter.c  mqtt_adapter.h  mqtt_client.c  mqtt_client.h  mqtt_codec.c  mqtt_codec.h  northbound.h  rfid.c  rfid.h  shmem.c  shmem.h  shmem_offsets.h  web.c  web.h  web_html.h
boards/eluminocity-ch21130/docs/: 01-Pri_Comm-protocol.md  02-IPC-and-main-architecture.md  03-OCPP-and-firmware-bundle.md  04-sharemem-decoded.md  05-bench-m0-2026-05-15.md  06-shmem-RE-from-binaries.md  07-persistence-paths.md  08-rfid-auth-flow.md  09-rfid-bench-findings.md  10-rfid-protocol-decoded.md  11-pri_comm-syscall-trace.md  12-rfid-v06-shipped.md  13-metering-and-adc-trace.md  14-shmem-producer-consumer-map.md  15-ttyAMA1-contention-resolved.md  16-meter-personality.md  17-adc-personality.md  18-pricomm-deferred.md  19-led_control-and-flashlog-RE.md  20-csr-and-rtc-RE.md  21-led-personality-and-kwh-persistence.md  22-m12-stripped-dcofimage.md  23-deltaevseconfig-usb-import.md  24-bench-brick-recovery-procedure.md
boards/nexcyber/: README.md  main.c  n32g457.ld  pin_map.h
boards/nexcyber-zbu011k/: README.md  board.cmake  pin_map.h
boards/nexcyber-zbu011k/bench/: bringup_main.c
boards/nexcyber/hal/: adc_scan.c  adc_scan.h  bl0939.c  bl0939.h  cp_pwm.c  cp_pwm.h  gpio.c  led_ring.c  relay.h
boards/rippleon-roc001/: README.md  board.cmake
boards/rippleon-roc001/fc41d/: openevcharger.yaml  secrets.yaml.example
boards/rippleon-roc001/fc41d/boards/: README.md  (+1 more)
cmake/: arm-none-eabi-toolchain-cm4f.cmake  arm-none-eabi-toolchain.cmake  options.cmake
docs/: bring-up.md  diode-check-investigation.md  re-stock-safety.md  release-notes-2026.19.0.md  release-notes-v1.0.0-roc001.md  safety.md  status-2026-05-04.md  status-2026-05-06.md
docs/ports/: nexcyber-feasibility.md
docs/superpowers/plans/: 2026-05-02-m0-toolchain-bootstrap.md  2026-05-02-m1-freertos-scaffold.md  2026-05-02-m2-gpio-adc-uart.md  2026-05-02-m3-cp-pwm-state-machine.md  2026-05-02-m4-spi3-w25q.md  2026-05-02-m5-boot-count.md  2026-05-02-m5b1-pingpong-boot-config.md  2026-05-02-m5b2-calibration.md  2026-05-02-m5b3-event-log.md  2026-05-02-m5b4-session-log.md  2026-05-02-m5b5-persist-queue.md  2026-05-02-m5b6-crash-loop.md  2026-05-02-m6-1-fault-catalog.md  2026-05-14-eluminocity-ch21130-mqtt-bridge.md  2026-05-14-multi-mcu-board-structure.md
docs/superpowers/specs/: 2026-05-02-safety-core-v1-design.md  2026-05-14-eluminocity-ch21130-mqtt-bridge-design.md  2026-05-14-multi-mcu-board-structure-design.md
fc41d/: README.md  openbhzd.yaml  openevcharger.yaml  secrets.yaml.example
fc41d/components/openbhzd_tlv/: __init__.py  binary_sensor.py  button.py  ntc_lut.h  number.py  openbhzd_tlv.cpp  openbhzd_tlv.h  sensor.py  switch.py  text_sensor.py
fc41d/components/openevcharger_tlv/: __init__.py  button.py  openevcharger_tlv.cpp  openevcharger_tlv.h  sensor.py
linker/: gd32f205vc.ld
recovery/: README.md
src/: FreeRTOSConfig.h  main.c
src/core/: evse_state.h  fault.c  fault.h  gfci_policy.c  gfci_policy.h  j1772.c  j1772.h  over_temp.c  over_temp.h  pin_map.h  rfid.c  rfid.h  system_state.c  system_state.h  system_time.c  system_time.h
src/diag/: stack_watch.c  stack_watch.h
src/drivers/: w25q.c
src/hal/: adc_inject.c  adc_inject.h  adc_scan.c  adc_scan.h  bl0939.c  bl0939.h  board_init.h  clock.c  clock.h  cp_pwm.c  cp_pwm.h  flash.c  flash.h  gfci.c  gfci.h  gpio.c  gpio.h  oevc_hal_stub.h  relay.c  relay.h  reset_cause.h  rfid.c  rfid.h  rtc.c  rtc.h  spi3.c  spi3.h  uart.c  uart.h  uart5.c  uart5.h  w25q.c  w25q.h  wdg.c  wdg.h  ws2812.c  ws2812.h
src/hal/gd32f205/: adc_inject.c  adc_scan.c  bl0939.c  board_init.c  clock.c  cp_pwm.c  flash.c  gfci.c  gpio.c  relay.c  reset_cause.c  rfid.c  rtc.c  spi3.c  uart.c  uart5.c  w25q.c  wdg.c  ws2812.c
src/hal/n32g45x/: adc_inject.c  adc_scan.c  adc_scan.h  adc_scan_nx.h  adc_scan_shared_stub.c  bl0939.c  board_init.c  clock.c  cp_pwm.c  flash.c  gfci.c  gfci.h  gfci_nx.h  gfci_shared_stub.c  gpio.c  led_ring.c  led_ring.h  nextion.c  nextion.h  relay.c  relay_nx.h  relay_shared_stub.c  reset_cause.c  rfid.c  rtc.c  spi2.c  spi2.h  spi3.c  uart.c  uart5.c  wdg.c  ws2812.c
src/persist/: boot_config.c  boot_config.h  boot_count.c  boot_count.h  calibration.c  calibration.h  crash_state.c  crash_state.h  crc.c  crc.h  crc16.c  crc16.h  event_log.c  event_log.h  ota_stage.c  ota_stage.h  pingpong.c  pingpong.h  rfid_authlist.c  rfid_authlist.h  session_log.c  session_log.h
src/proto/: build_info.h  commands.h  tlv.c  tlv.h
src/tasks/: comms_task.c  comms_task.h  fc41d_flash_helper.c  fc41d_flash_helper.h  io_task.c  io_task.h  persist_task.c  persist_task.h  safety_task.c  safety_task.h
src/ui/: buttons.c  buttons.h  buzzer.c  buzzer.h  led_patterns.c  led_patterns.h
tests/: CMakeLists.txt  test_boot_config.c  test_crc16.c  test_crc32.c  test_fault.c  test_gfci_policy.c  test_harness.h  test_j1772.c  test_main.c  test_ota_stage.c  test_over_temp.c  test_pingpong.c  test_system_time.c  test_tlv.c
tests/mocks/: host_stubs.c  w25q_mock.c  w25q_mock.h
tools/: baud_sweep.py  dgus_brr_sweep.py  dgus_listen.py  dgus_probe.py  dgus_test.py  flash.sh  flash_nexcyber.sh  flash_stock.sh  gfci_wiggle.sh  gpio_diff.sh  host_client.py  led_passive_probe.py  led_walk.py  ntc_peek.py  openocd-gd32f205.cfg  openocd-monitor.sh  openocd-n32g45x-flash.tcl  pc11_red_test.py  pc14_red_test.py  post_mortem.sh  relay_poke.sh  restore_stock_nexcyber.sh  stock_backup.sh  u11_wiggle.sh  uart_wiggle.py
(+41 files in other folders)
